[package]
name = "cargo-latest"
version = "0.1.0"
authors = ["Michael Dorst <m@mdorst.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A cargo subcommand for getting the latest versions of your packages"
repository = "https://github.com/mfdorst/cargo-latest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crates_io_api = "0.7.0"
anyhow = "1.0.40"
